--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,5 +1,5 @@
 
-url = jdbc:mysql://127.0.0.1:3306/pizza-db?useSSL=false&nullNamePatternMatchesAll=true
-driver = com.mysql.jdbc.Driver
+url = jdbc:h2:mem:AZ
+driver = org.h2.Driver
 username = pizza-user
 password = pizza-pass
