--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,14 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-rest</artifactId>
     </dependency>
-
+    
+    <!-- Liquibase -->
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+      <version>3.4.1</version>
+    </dependency>
+    
     <!-- Spring Data JPA -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -55,6 +62,13 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
+    
+    <!-- H2 Database -->
+    <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
     <!-- Lombok -->
     <dependency>
